--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,6 @@ RewriteRule ^updateSeuil/([0-9]+)/([0-9]+)$ index.php?data=updateSeuil&id=$1&seu
 
 # Rediriger les requêtes getReaprovisionnement
 RewriteRule ^getReaprovisionnement$ index.php?data=getReaprovisionnement [QSA,L]
+
+# Rediriger les requêtes infosCommandes avec un id
+RewriteRule ^infosCommandes/([0-9]+)$ index.php?data=infosCommandes&id=$1 [QSA,L]
